Updated README.md, set image size in css to stop jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,8 @@ h1 {
     width: 300px;
     height: auto;
 } */
+
+#banner {
+    width: 800px;
+    height: 300px;
+}
